subnet_public.tf
resource "aws_subnet" "public_network" {
  vpc_id            = aws_vpc.project_name.id
  cidr_block        = cidrsubnet(var.vpc_cidr_block, 8, 1)
  availability_zone = "${data.aws_region.current.region}a"

  map_public_ip_on_launch = var.map_public_ip_pub_network

  tags = merge(local.tags,
    {
      Name = "${var.project_name}-public_network"
    }
  )

}

resource "aws_route_table_association" "rtb_pubnet_assoc" {
  subnet_id      = aws_subnet.public_network.id
  route_table_id = aws_route_table.public_route_table.id
}
